WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305247
[WebKit] Fix -Wreturn-stack-address in -currentTextPointer
https://bugs.webkit.org/show_bug.cgi?id=305247
Summary
[WebKit] Fix -Wreturn-stack-address in -currentTextPointer
David Kilzer (:ddkilzer)
Reported
2026-01-09 19:22:43 PST
Fix -Wreturn-stack-address in -[WKDOMTextIterator currentTextPointer] in WebKit and in -[WebTextIterator currentTextPointer] in WebKitLegacy.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-09 19:22:55 PST
<
rdar://problem/167885469
>
David Kilzer (:ddkilzer)
Comment 2
2026-01-09 19:29:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56381
EWS
Comment 3
2026-01-11 13:50:28 PST
Committed
305431@main
(fc03b8e1ac8c): <
https://commits.webkit.org/305431@main
> Reviewed commits have been landed. Closing PR #56381 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug