[WebKit] Fix -Wreturn-stack-address in -currentTextPointer <https://bugs.webkit.org/show_bug.cgi?id=305247> <rdar://167885469>

Reviewed by Geoffrey Garen.

No new tests since no change in behavior.

* Source/WTF/wtf/text/StringView.h:
(WTF::StringView::unsafeSpan16): Add.
- Add version of span16() without lifetimebound attribute.
* Source/WebKit/WebProcess/InjectedBundle/API/mac/WKDOMTextIterator.mm:
(-[WKDOMTextIterator currentTextPointer]):
- Use unsafeSpan16() to avoid lifetimebound warning.
* Source/WebKitLegacy/mac/WebView/WebTextIterator.mm:
(-[WebTextIterator currentTextPointer]):
- Ditto.

Canonical link: https://commits.webkit.org/305431@main